Fix some reponsive need to be usable on mobile (still uggly on responsive)

--- a/source/stylesheets/components/_how-many.scss
+++ b/source/stylesheets/components/_how-many.scss
@@ -15,6 +15,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     outline: none;
+    background-color: #FFF;
     &:before {
       content: '';
       display: none;
