--- a/source/stylesheets/pages/product.scss
+++ b/source/stylesheets/pages/product.scss
@@ -135,6 +135,7 @@ section#product {
       }
       .snipcart__buy-button {
         margin-top: 0;
+        margin-bottom: 3em;
       }
     }
   }
